# mcp-korea-maps

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-setup.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/mcp_maps/: server.py
src/mcp_maps/apis/: kakao.py
tests/unit/: test_server.py
tests/unit/apis/: conftest.py  test_kakao.py
